--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -6,7 +6,7 @@ body {
     text-align: center;
     background-color:#1A2A33;
 
-    /***   **/
+    /*** #F2B137  **/
   }
   html, body{
     height:100vh;
@@ -30,6 +30,7 @@ body {
     margin-top: 10rem;
     /* visibility: hidden; */
     /* display: none; */
+    /* COMMENT THE DISPLAY WHEN DONE WITH THE RECTANGLE */
   }
 
   .second-div{
@@ -130,12 +131,12 @@ body {
 
 } 
 .rememberX{
-font-family: 'Outfit', sans-serif;
-font-size: 14px;
-letter-spacing: 0.875px;
-color: #A8BFC9;
-opacity: 0.5;
-padding-bottom: 10px;
+  font-family: 'Outfit', sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.875px;
+  color: #A8BFC9;
+  opacity: 0.5;
+  padding-bottom: 10px;
 }
 
 /* BOARD FORMATTING */
@@ -202,29 +203,28 @@ padding-bottom: 10px;
   align-items: center
 }
 .first-row3{
-width: 52px;
-height: 52px;
-background-color: #A8BFC9;
-box-shadow: inset 0px -4px 0px #6B8997;
-border-radius: 10px;
-margin-left: 65%;
-cursor: pointer;
+  width: 52px;
+  height: 52px;
+  background-color: #A8BFC9;
+  box-shadow: inset 0px -4px 0px #6B8997;
+  border-radius: 10px;
+  margin-left: 65%;
+  cursor: pointer;
 }
+.first-row3:hover{
+  background-color: #DBE8ED;
+}
+
 .redo{
   margin: 0 auto;
   position: relative;
   top: 15px;
 }
 .winnerX{
-  background-color: #31C3BD;
-  
-  
-  
+  background-color: #31C3BD; 
 }
 .winnerO{
-  background-color: #F2B137; 
-  
-  
+  background-color: #F2B137;  
 }
 
 .xPlay{
@@ -233,19 +233,7 @@ cursor: pointer;
 .oPlay{
   color: #F2B137;
 }
-.rectangle{
-  width: 100%;
-  height: 30vh;
-  background-color: #1F3641;
-  margin-top: 30%;
-  display: none;
-}
-.group-26{
-  margin-top: 40px;
-  background-color: yellow;
-  width: 30%;
-  height: 80%;
-}
+
 .numbers{
   font-family: 'Outfit';
   font-style: normal;
@@ -256,15 +244,164 @@ cursor: pointer;
   color: #1A2A33;
 }
 .score-write{
-  font-family: 'Outfit';
+  font-family: 'Outfit', sans-serif;
   font-style: normal;
   font-weight: 500;
   line-height: 18px;
   letter-spacing: 0.875px;
   color: #1A2A33;
+
+}
+
+/* CSS FOR THE RECTANGLE */
+.rectangle{
+  width: 100%;
+  height: 40vh;
+  background-color: #1F3641;
+  margin-top: 30vh;
+  display: none;
+}
+
+.group-10{
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.winnerP{
+  font-family: 'Outfit', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #A8BFC9;
+
+}
+.takes{
+  font-family: 'Outfit',sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 50px;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+  color: #31C3BD;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  gap: 1.5rem;
+
+}
+.pl-image{
+  margin-left: 5px;
+
+}
+.quit{
+  height: 56px;
+  width: 72px;
+  background-color: #A8BFC9;
+  box-shadow: inset 0px -4px 0px #6B8997;
+  border-radius: 10px;
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 1px;
+  color: #1A2A33;
+  margin-right: 1rem;
+  cursor: pointer;
+  
+}
+.quit:hover{
+  background-color: #DBE8ED;
+}
+.next-round{
+  height: 56px;
+  width: 146px;
+  background-color: #F2B137;
+  box-shadow: inset 0px -4px 0px #CC8B13;
+  border-radius: 10px;
+  font-family: 'Outfit', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 1px;
+  color: #1A2A33;
+  cursor: pointer;
+}
+.next-round:hover{
+  background-color: #FFC860;
+}
+/* RESTART RECTANGLE */
+.rectangle1{
+  width: 100%;
+  height: 30vh;
+  background-color: #1F3641;
+  
+  margin-top: 30vh;
+  display: none;
+}
+.restart-gameP{
+  font-family: 'Outfit', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 50px;
+  text-align: center;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+  color: #A8BFC9;
+  
 }
 
 
+.group-11{
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+
+.cancel{
+  height: 50px;
+  width: 150px;
+  background-color: #A8BFC9;
+  box-shadow: inset 0px -4px 0px #6B8997;
+  border-radius: 10px;
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 1px;
+  color: #1A2A33;
+  margin-right: 16px;
+  cursor: pointer;
+
+}
+.cancel:hover{
+  background-color: #DBE8ED;
+}
+.restart{
+  width: 150px;
+  height: 50px;
+  font-family: 'Outfit', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 1px;
+  color: #1A2A33;
+  background-color: #F2B137;
+  box-shadow: inset 0px -4px 0px #CC8B13;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.restart:hover{
+  background-color: #FFC860;
+}
 @media (max-width: 1100px){
   #table{
    margin-top: 20vh;
