--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -426,5 +426,14 @@ body {
     width: 96px;
     height: 96px;
   }
+  /* #x-img{
+    width: 40px;
+    height: 40px;
+  }
+  #o-img{
+    width: 40px;
+    height: 40px;
+  } */
+
 
 }
