--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -25,9 +25,13 @@ body {
   #homePage{
     width: 28rem;
     height:50vh;
-    margin-left: auto;
+    /* margin-left: auto;
     margin-right: auto;
-    margin-top: 10rem;
+    margin-top: 25vh; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     /* visibility: hidden; */
     /* display: none; */
     /* COMMENT THE DISPLAY WHEN DONE WITH THE RECTANGLE */
@@ -64,7 +68,7 @@ body {
     box-shadow: inset 0px -8px 0px #CC8B13;
     border-radius: 15px;
     height: 65px;
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
     line-height: 4;
     cursor: pointer;
 
@@ -140,27 +144,32 @@ body {
 }
 
 /* BOARD FORMATTING */
-#table{
-  
-  margin-left: auto;
-  margin-right: auto;
+#table {
   border-spacing: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   display: none;
 }
 
-.cell{
-  border: 10px;
-  height: 150px;
-  width: 150px;
-  text-align: center;
-  background-color: #1F3641;
-  box-shadow: inset 0px -8px 0px #10212a;
-  border-radius: 15px; 
-  cursor: pointer;
-  border-spacing: 20px;
-  font-size: 80px ;
-  font-weight: 900;
-  color: #31C3BD;
+.cell {
+    border: 10px;
+    height: 150px;
+    width: 150px;
+    text-align: center;
+    background-color: #1F3641;
+    box-shadow: inset 0px -8px 0px #10212a;
+    border-radius: 15px;
+    cursor: pointer;
+    margin-bottom: 20px;
+    font-size: 80px;
+    font-weight: 900;
+    color: #31C3BD;
 }
 
 .cell2{
@@ -263,8 +272,8 @@ body {
 }
 
 .group-10{
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 2rem;
+  
 }
 .winnerP{
   font-family: 'Outfit', sans-serif;
@@ -403,8 +412,9 @@ body {
   background-color: #FFC860;
 }
 @media (max-width: 1100px){
-  #table{
-   margin-top: 20vh;
+  
+  .rectangle{
+    height: 25vh;
   }
 }
 
@@ -426,14 +436,27 @@ body {
     width: 96px;
     height: 96px;
   }
-  /* #x-img{
+  .takes{
+    font-size: 1.8rem;
+  }
+  #x-img{
     width: 40px;
-    height: 40px;
+   
   }
   #o-img{
     width: 40px;
-    height: 40px;
-  } */
+   
+  }
+  .rectangle{
+    height: 30vh;
+  }
 
-
+  @media (max-width: 400px){
+    .rectangle{
+      height: 35vh;
+    }
+    .takes{
+      font-size: 1.7rem;
+    }
+  }
 }
