Changes made to Computer vs Human

--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,12 @@ body {
     background-color: #A8BFC9;
 
   }
+  .use-first-effects{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1A2A33;
+  }
   
 
   .new-game{
@@ -135,7 +141,7 @@ body {
     height: 80%;
     border-radius: 10px;
     color:  #1A2A33;
-    align-items: center;
+   
     line-height: 1;
     cursor: pointer;
 
@@ -303,12 +309,18 @@ body {
   line-height: 50px;
   letter-spacing: 2.5px;
   text-transform: uppercase;
-  color: #31C3BD;
+  color: "#A8BFC9";
   justify-content: center;
   align-items: center;
   display: flex;
   gap: 1.5rem;
 
+}
+.takes-winnerO{
+ color: #F2B137;
+}
+.takes-winnerX{
+ color: #31C3BD;
 }
 .pl-image{
   margin-left: 5px;
@@ -402,6 +414,14 @@ body {
 .cancel:hover{
   background-color: #DBE8ED;
 }
+.handle-reset{
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+}
 .restart{
   width: 150px;
   height: 50px;
@@ -420,6 +440,13 @@ body {
 .restart:hover{
   background-color: #FFC860;
 }
+.disabled {
+  pointer-events: none;
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+
 @media (max-width: 1100px){
   
   .rectangle{
