--- a/styles.css
+++ b/styles.css
@@ -456,6 +456,10 @@ body {
   .rectangle{
     height: 25vh;
   }
+  .cell{
+    height: 140px;
+    width: 140px;
+  }
 }
 
 @media (max-width: 700px){
@@ -497,6 +501,26 @@ body {
     }
     .takes{
       font-size: 1.7rem;
+    }
+    .first-row2{
+      font-size: 12px;
+    }
+    .cell{
+      border-radius: 10px;
+      width: 96px;
+      height: 96px;
+    }
+    .game-title-bar{
+      border-bottom: 20px;
+    }
+    .first-row1{
+      width: 72px;
+      height: 32px;
+    }
+  }
+  @media (max-width: 300px){
+    #homePage {
+      width: 13rem;
     }
   }
 }
