--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
 
   #homePage{
     width: 28rem;
-    height:50vh;
+    /* height:50vh; */
     /* margin-left: auto;
     margin-right: auto;
     margin-top: 25vh; */
