Mobile view resolved

--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,7 @@ body {
     border-radius: 15px;
     cursor: pointer;
     margin-bottom: 20px;
-    font-size: 80px;
+    /* font-size: 80px; */
     font-weight: 900;
     color: #31C3BD;
 }
@@ -463,6 +463,30 @@ body {
 }
 
 @media (max-width: 700px){
+  /* img{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  } */
+ 
+  .score-write{
+    font-size: 12px;
+  }
+  .make-cell{
+    width: 80px;
+  }
+  .numbers{
+    font-size: 20px;
+  }
+  .first-row2{
+    width: 84px;
+  }
+  
+  .xo-logo{
+    width: 80px;
+  }
   #homePage {
     width: 20rem;
   }
@@ -496,6 +520,16 @@ body {
   }
 
   @media (max-width: 400px){
+    #xwin-img, #xwin1-img, #owin-img, #owin1-img{
+      width: 40px;
+      height: 40px;
+
+    }
+   
+    .center{
+      text-align: center;
+      margin: 0 auto;
+    }
     .rectangle{
       height: 35vh;
     }
